[workspace]
resolver = "3"
members = ["lib", "nodejs", "python"]

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
