[package]
name = "timesimp"
version = "0.0.2"
edition = "2024"

authors = ["Félix Saparelli <felix@passcod.name>"]
description = "Simple sans-io timesync client and server"
documentation = "https://docs.rs/timesimp"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/passcod/timesimp"
keywords = ["sync", "sans-io", "network", "time"]
categories = ["date-and-time"]

[dependencies]
jiff = "0.2.10"
rand = "0.9.1"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
