[package]
edition = "2024"
name = "timesimp-nodejs"
version = "1.0.1"
publish = false

[lib]
name = "timesimp_nodejs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = [
    "async",
    "napi4",
    "tokio_rt",
] }
napi-derive = "2.12.2"
serde_json = "1.0.140"
timesimp = { version = "1.0.0", path = "../lib" }
tokio = { version = "1.44.2", features = ["sync", "time"] }

[build-dependencies]
napi-build = "2.0.1"
