[package]
edition = "2024"
name = "timesimp-nodejs"
version = "1.0.3"
publish = false

[lib]
name = "timesimp_nodejs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.0.0-alpha.33", default-features = false, features = [
    "async",
    "napi9",
    "tokio_rt",
] }
napi-derive = "=3.0.0-alpha.29"
serde_json = "1.0.140"
timesimp = { version = "1.0.0", path = "../lib" }
tokio = { version = "1.44.2", features = ["sync", "time"] }

[build-dependencies]
napi-build = "2.1.3"
